# jasper_win

./: CMakeLists.txt  CMakePresets.json2  README.md
src/: main.cpp  main2.cpp  service.cpp  testXmlParser.cpp
